crates/apollo-compiler/test_data/diagnostics/0067_subselection_of_interface.txt
Error: interface, union and object types must have a subselection set
   ╭─[0067_subselection_of_interface.graphql:2:3]
   │
 2 │   pet1
   │   ──┬─  
   │     ╰─── `Query.pet1` is an interface type `Pet` and must select fields
───╯
Error: interface, union and object types must have a subselection set
   ╭─[0067_subselection_of_interface.graphql:3:3]
   │
 3 │   pet2
   │   ──┬─  
   │     ╰─── `Query.pet2` is an interface type `Pet` and must select fields
───╯
Error: interface, union and object types must have a subselection set
   ╭─[0067_subselection_of_interface.graphql:4:3]
   │
 4 │   pet3
   │   ──┬─  
   │     ╰─── `Query.pet3` is an interface type `Pet` and must select fields
───╯
Error: interface, union and object types must have a subselection set
   ╭─[0067_subselection_of_interface.graphql:5:3]
   │
 5 │   pet4
   │   ──┬─  
   │     ╰─── `Query.pet4` is an interface type `Pet` and must select fields
───╯
Error: interface, union and object types must have a subselection set
   ╭─[0067_subselection_of_interface.graphql:6:3]
   │
 6 │   pet5
   │   ──┬─  
   │     ╰─── `Query.pet5` is an interface type `Pet` and must select fields
───╯
Error: interface, union and object types must have a subselection set
   ╭─[0067_subselection_of_interface.graphql:7:3]
   │
 7 │   pet6
   │   ──┬─  
   │     ╰─── `Query.pet6` is an interface type `Pet` and must select fields
───╯

